--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "main": "forumhome.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node forumhome.js"
   },
   "repository": {
     "type": "git",
